adds support for testing with git repos, including a smoke test